--- a/index/Home/View/Teacherlogin/index.html
+++ b/index/Home/View/Teacherlogin/index.html
@@ -5,7 +5,7 @@
     <title>{$title}</title>
 </head>
 <body>
-<form action="__URL__/login" method="POST">
+<form action="__URL__/teacherlogin" method="POST">
 
     <p>
         <label>用户名</label>
