--- a/index/Home/View/Endgrouping/index.html
+++ b/index/Home/View/Endgrouping/index.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 <p><a href="__URL__/quit" title="退出">退出</a> </p>
+<volist name="stulist" id="vo">
+    {$vo.stuname}
+    <label><input name="{$i}" type="radio" value="1" />  </label>
+    <label><input name="{$i}" type="radio" value="2" />  </label>
+    <label><input name="{$i}" type="radio" value="3" />  </label>
+    <br/>
+</volist>
 
 
 </body>
