--- a/Public/css/pagination.css
+++ b/Public/css/pagination.css
@@ -1,14 +1,12 @@
-@charset "utf-8";      
+@charset "utf-8";
 .pagination a {
-    text-decoration: none;
+  text-decoration: none;
 	border: 1px solid #AAE;
 	color: #15B;
 }
 
 .pagination a, .pagination span {
-    position: relative;
-	float: left;
-	padding: 6px 12px;
+	padding: 9px 12px;
 	margin-left: -1px;
 	line-height: 1.42857143;
 	color: #337ab7;
@@ -18,16 +16,23 @@
 }
 
 .pagination .current {
-    z-index: 3;
+  z-index: 3;
 	color: #fff;
 	cursor: default;
 	background-color: #337ab7;
 	border-color: #337ab7;
 }
 
-.pagination .current.prev, .pagination .current.next{
-	color:#999;
-	border-color:#999;
-	background:#fff;
+.pagination .prev{
+	border-radius: 8px 0px 0px 8px;
+}
+.pagination .next{
+	border-radius: 0px 8px 8px 0px;
 }
 
+.pagination .current.prev, .pagination .current.next{
+	cursor: not-allowed;
+	color:#999;
+	border-color:#999;
+	background:#eee;
+}
