--- a/index/Home/View/Login/index.html
+++ b/index/Home/View/Login/index.html
@@ -1,47 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{$title}</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>登录</title>
+	<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+
+	<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <script>
+		$(function(){
+
+		});
+	</script>
+
+  <style>
+		body{
+			background:url(__PUBLIC__/img/login-bg.jpg) no-repeat;
+			background-size: cover;
+		}
+		.header{
+			padding:15px 0;
+			color:#fff;
+			background-color:#847575;
+			background: rgba(0,0,0,0.30);
+		}
+		.login-wrapper{
+			width:550px;
+			padding-top:120px;
+		}
+		.bg-transparent{
+			background-color:#FFF;
+			background: rgba(0,0,0,0.08);
+			border: none;
+		}
+
+	</style>
+
 </head>
+
 <body>
-<form action="__URL__/login" method="POST">
+		<!-- 头部 -->
+		 <div class="header">
+        <div id="vm" class="container">
+            <h2 style="font-size:50px"><span class="glyphicon glyphicon-home">DDD系统</span></h2>
+            <p style="color:#ddd;font-size:24px; line-height:48px">欢迎您</p>
+        </div>
+    </div>
 
-    <p>
-        <label>用户名</label>
-        <input class="text-input" type="text"  name="id"/>
-    </p>
-
-    <div class="clear"></div>
-
-    <p>
-        <label>密码</label>
-        <input class="text-input" type="password" name="password"/>
-    </p>
-
-    <div class="clear"></div>
-
-    <p>
-        <!--<label>验证码</label>
-        <input class="text-input" type="text" name="verify"/>
-        <img src="__APP__/Common/verify"/ onclick="show(this)">-->
-
-        <img id="verifyImg" src="__URL__/verify"  >
-    </p>
-
-    <div class="clear"></div>
-
-    <p>
-        <label>验证码</label>
-        <input type="text" name="captcha" class="form-control" id="exampleInputCode" placeholder="Code">
-    </p>
-
-    <div class="clear"></div>
-
-
-    <p>
-        <input class="button" type="submit" value="登录" />
-    </p>
-</form>
+		<!-- 主体内容 -->
+		<div class="container login-wrapper" >
+			<div class="panel panel-default bg-transparent" >
+			    <div class="panel-heading bg-transparent">
+			        <h3 class="panel-title">登录界面</h3>
+			    </div>
+			    <div class="panel-body bg-transparent">
+			       <form id="login-form" class="form-horizontal" role="form" action="__URL__/login" method="POST">
+					 		  <div class="form-group">
+					 		    <label class="col-sm-2 control-label"><span class="glyphicon glyphicon-user"> 帐号</span></label>
+					 		    <div class="col-sm-10">
+					 		      <input type="text" class="form-control" name="id">
+					 		    </div>
+					 		  </div>
+					 		  <div class="form-group">
+					 		    <label class="col-sm-2 control-label"><span class="glyphicon glyphicon-lock"> 密码</span></label>
+					 		    <div class="col-sm-10">
+					 		      <input type="password" class="form-control" name="password">
+					 		    </div>
+					 		  </div>
+					 		  <div class="form-group">
+								  <label class="col-sm-2 control-label"><span class="glyphicon glyphicon-question-sign">验证码</span></label>
+					 		      <div class="col-sm-5">
+									  <input type="text" class="form-control" id="exampleInputCode" name="captcha" placeholder="请输入验证码">
+					 		       </div>
+								  <div class="col-sm-5">
+									 <img id="verifyImg" src="__URL__/verify" style="width:95%"/>
+								  </div>
+					 		  </div>
+					 		  <div class="form-group">
+					 		    <div class="col-sm-offset-2 col-sm-10">
+					 		      <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-log-in"> 登录</span></button>
+					 		    </div>
+					 		  </div>
+					 		</form>
+			    </div>
+			</div>
+		</div>
 </body>
-</html>
