--- a/index/Home/View/Defensegrouping/teachergrouping.html
+++ b/index/Home/View/Defensegrouping/teachergrouping.html
@@ -11,7 +11,7 @@
 
 
 <foreach name="groupteachername" item="v" key="i">
-    <label>第{$i+1}组  </label>
+    <label>第{$i}组  </label>
     <foreach name="v" item="value" key="j">
 
              <{$value}>
